python/tests/gold/idletimeout/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "idletimeout.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "idletimeout.default.1": {
            "_referenced_by": {},
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v1",
            "config": {
                "idle_timeout": "30s"
            },
            "kind": "Module",
            "location": "idletimeout.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default",
            "rkey": "idletimeout.default.1",
            "serialization": "ambassador_id: idletimeout\napiVersion: ambassador/v1\nconfig:\n  idle_timeout: 30s\nkind: Module\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: idletimeout\n  scope: AmbassadorTest\nname: ambassador\n"
        },
        "idletimeout.default.2": {
            "_referenced_by": {},
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "idletimeout.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "config__dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "rkey": "idletimeout.default.2",
            "serialization": "ambassador_id: idletimeout\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: idletimeout\n  scope: AmbassadorTest\nname: config__dump\nprefix: /config_dump\nrewrite: /config_dump\nservice: http://127.0.0.1:8001\n",
            "service": "http://127.0.0.1:8001"
        },
        "k8s-idletimeout-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-idletimeout-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest",
                "service": "idletimeout-admin"
            },
            "name": "idletimeout-admin",
            "namespace": "default",
            "rkey": "k8s-idletimeout-admin-default",
            "serialization": "ambassador_id: idletimeout\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: idletimeout\n  scope: AmbassadorTest\n  service: idletimeout-admin\nname: idletimeout-admin\nnamespace: default\n"
        },
        "k8s-idletimeout-default": {
            "_referenced_by": {},
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-idletimeout-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "idletimeout",
            "namespace": "default",
            "rkey": "k8s-idletimeout-default",
            "serialization": "ambassador_id: idletimeout\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: idletimeout\n  scope: AmbassadorTest\nname: idletimeout\nnamespace: default\n"
        },
        "k8s-idletimeout-http-default": {
            "_referenced_by": {},
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-idletimeout-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "idletimeout-http",
            "namespace": "default",
            "rkey": "k8s-idletimeout-http-default",
            "serialization": "ambassador_id: idletimeout\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: idletimeout\n  scope: AmbassadorTest\nname: idletimeout-http\nnamespace: default\n"
        }
    },
    "mappings": {
        "config__dump": {
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "config__dump",
            "namespace": "default",
            "prefix": "/config_dump",
            "rewrite": "/config_dump",
            "service": "http://127.0.0.1:8001"
        }
    },
    "modules": {
        "ambassador": {
            "apiVersion": "getambassador.io/v1",
            "idle_timeout": "30s",
            "kind": "Module",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "ambassador",
            "namespace": "default"
        }
    },
    "service": {
        "k8s-idletimeout-admin-default": {
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest",
                "service": "idletimeout-admin"
            },
            "name": "idletimeout-admin",
            "namespace": "default"
        },
        "k8s-idletimeout-default": {
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "idletimeout",
            "namespace": "default"
        },
        "k8s-idletimeout-http-default": {
            "ambassador_id": "idletimeout",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "idletimeout",
                "scope": "AmbassadorTest"
            },
            "name": "idletimeout-http",
            "namespace": "default"
        }
    }
}
