python/tests/gold/idletimeout/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: Module\nname: ambassador\nambassador_id: idletimeout\nconfig:\n  idle_timeout: '30s'\n\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: config__dump\nprefix: /config_dump\nrewrite: /config_dump\nservice: http://127.0.0.1:8001\nambassador_id: idletimeout\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: Module\\nname: ambassador\\nambassador_id: idletimeout\\nconfig:\\n  idle_timeout: '30s'\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: config__dump\\nprefix: /config_dump\\nrewrite: /config_dump\\nservice: http://127.0.0.1:8001\\nambassador_id: idletimeout\\n\"}, [...]
                    },
                    "creationTimestamp": "2020-01-14T18:59:28Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "idletimeout",
                        "scope": "AmbassadorTest"
                    },
                    "name": "idletimeout",
                    "namespace": "default",
                    "resourceVersion": "128967",
                    "selfLink": "/api/v1/namespaces/default/services/idletimeout",
                    "uid": "6d8aa86a-2494-49c9-8887-353c1b505e3f"
                },
                "spec": {
                    "clusterIP": "10.104.181.230",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30270,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30662,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "idletimeout"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {
                        "ingress": [
                            {
                                "hostname": "localhost"
                            }
                        ]
                    }
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"idletimeout\",\"scope\":\"AmbassadorTest\",\"service\":\"idletimeout-admin\"},\"name\":\"idletimeout-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"idletimeout-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"idletimeout\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-14T18:59:29Z",
                    "labels": {
                        "kat-ambassador-id": "idletimeout",
                        "scope": "AmbassadorTest",
                        "service": "idletimeout-admin"
                    },
                    "name": "idletimeout-admin",
                    "namespace": "default",
                    "resourceVersion": "128972",
                    "selfLink": "/api/v1/namespaces/default/services/idletimeout-admin",
                    "uid": "849c3506-3522-45b9-bc33-211ed93aecd9"
                },
                "spec": {
                    "clusterIP": "10.101.157.166",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "idletimeout-admin",
                            "nodePort": 31649,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "idletimeout"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {
                        "ingress": [
                            {
                                "hostname": "localhost"
                            }
                        ]
                    }
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"idletimeout\",\"scope\":\"AmbassadorTest\"},\"name\":\"idletimeout-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\":{\"backend\":\"superpod-de [...]
                    },
                    "creationTimestamp": "2020-01-14T18:59:29Z",
                    "labels": {
                        "kat-ambassador-id": "idletimeout",
                        "scope": "AmbassadorTest"
                    },
                    "name": "idletimeout-http",
                    "namespace": "default",
                    "resourceVersion": "128978",
                    "selfLink": "/api/v1/namespaces/default/services/idletimeout-http",
                    "uid": "5ca02627-ff83-4f99-887d-4aeeed79493c"
                },
                "spec": {
                    "clusterIP": "10.110.78.83",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
